@@ -53,6 +53,10 @@ version 2.76
 
 	    Add --dhcp-ttl option.
 
+	    Add --tftp-mtu option. Thanks to Patrick McLean for the 
+	    initial patch.
+
+
 version 2.75
             Fix reversion on 2.74 which caused 100% CPU use when a 
 	    dhcp-script is configured. Thanks to Adrian Davey for
